--- a/rules.conf
+++ b/rules.conf
@@ -1,4 +1,11 @@
-# 	src_addr		dst_addr		src_port	dst_port	protocol	fwd_port
-R	192.168.3.0/24	192.168.2.0/24	0:65535		0:65535		0x0/0x0		0
-R	192.168.2.0/24	192.168.3.0/24	0:65535		0:65535		0x0/0x0		1
-@	123.0.123.0/24	192.168.3.0/24	80:80		80:80		6/0x123
+# R - Route rule (forward), lower priority
+# @ - ACL rule (drop), higher priority
+# # - Comment
+# 	src_addr		dst_addr		src_port	dst_port	protocol	port (R only)
+
+# All requests to 192.168.2.1 -> port 1
+R	0.0.0.0/0		192.168.2.1/32	0:65535		0:65535		0/0x0		1
+# All requests to 192.168.3.1 -> port 0
+R	0.0.0.0/0		192.168.3.1/32	0:65535		0:65535		0/0x0		0
+# Disable SSH (port 22) requests from 192.168.2.1 to 192.168.3.1
+@	192.168.2.1/32	192.168.3.1/32	0:65535		22:22		0/0x0
